#add laporan asset condition
