# src/reports/assetcondition/assetcondition.open_api.go
@@ -1,0 +1,51 @@
+package assetcondition
+
+import "github.com/maulanar/go_asset_tracking_management/app"
+
+// OpenAPI is constructor for *openAPI, to autogenerate open api document.
+func OpenAPI() *OpenAPIOperation {
+	return &OpenAPIOperation{}
+}
+
+// OpenAPIOperation embed from app.OpenAPIOperation for simplicity, used for autogenerate open api document.
+type OpenAPIOperation struct {
+	app.OpenAPIOperation
+}
+
+// Base is common detail of asset_conditions open api document component.
+func (o *OpenAPIOperation) Base() {
+	o.Tags = []string{"AssetCondition"}
+	o.HeaderParams = []map[string]any{{"$ref": "#/components/parameters/headerParam.Accept-Language"}}
+	o.Responses = map[string]map[string]any{
+		"200": {
+			"description": "Success",
+			"content":     map[string]any{"application/json": &AssetCondition{}}, // will auto create schema $ref: '#/components/schemas/AssetCondition' if not exists
+		},
+		"400": app.OpenAPIError().BadRequest(),
+		"401": app.OpenAPIError().Unauthorized(),
+		"403": app.OpenAPIError().Forbidden(),
+	}
+	o.Securities = []map[string][]string{}
+}
+
+// Get is detail of `GET /api/v3/asset_conditions` open api document component.
+func (o *OpenAPIOperation) Get() *OpenAPIOperation {
+	if !app.IS_GENERATE_OPEN_API_DOC {
+		return o // skip for efficiency
+	}
+
+	o.Base()
+	o.Summary = "Get Report Asset Condition"
+	o.Description = "Use this method to get Report Asset Condition"
+	o.QueryParams = []map[string]any{{"$ref": "#/components/parameters/queryParam.Any"}}
+	o.Responses = map[string]map[string]any{
+		"200": {
+			"description": "Success",
+			"content":     map[string]any{"text/html": &AssetConditionList{}}, // will auto create schema $ref: '#/components/schemas/AssetCondition.List' if not exists
+		},
+		"400": app.OpenAPIError().BadRequest(),
+		"401": app.OpenAPIError().Unauthorized(),
+		"403": app.OpenAPIError().Forbidden(),
+	}
+	return o
+}
